add core components: navbar and footer. closes #2

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,27 @@ body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+
+/*------------------developement-only------------*/
+.h-100px { height: 100px }
+.h-150px { height: 150px }
+.h-200 { height: 200px }
+.h-300 { height: 300px }
+.h-400 { height: 400px }
+.h-500 { height: 500px }
+.h-600 { height: 600px }
+
+.w-150px { width: 150px }
+.w-100px { width: 100px }
+.w-200 { width: 200px }
+.w-300 { width: 300px }
+.w-400 { width: 400px }
+.w-500 { width: 500px }
+.w-600 { width: 600px }
+
+/*------------------css-variables----------------*/
+:root {
+    --navbar-h: 150px;
+    --footer-h: 150px;
+}
