add home component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,8 @@
 <app-navbar></app-navbar>
 
 <div class="app-container container py-4">
-  <h1>Home page</h1>
-  <button class="btn btn-primary">hello</button>
-
-
-  <div class="alert alert-primary" role="alert">
-    A simple primary alert—check it out!
-  </div>
+  <!-- <router-outlet></router-outlet> -->
+  <app-home></app-home>
 </div>
 
 
