--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="app-container container py-4">
   <!-- <router-outlet></router-outlet> -->
-  <app-home></app-home>
+  <router-outlet></router-outlet>
 </div>
 
 
